--- a/data/yolov4-lp.cfg
+++ b/data/yolov4-lp.cfg
@@ -3,7 +3,7 @@
 #batch=1
 #subdivisions=1
 # Training
-batch=64
+batch=32
 subdivisions=16
 width=416
 height=416
@@ -15,15 +15,18 @@ saturation = 1.5
 exposure = 1.5
 hue=.1
 
+label_smooth_eps=0.1
+
 learning_rate=0.001
 burn_in=1000
 max_batches = 2000
-policy=steps
+policy=sgdr
 steps=1600,1800
 scales=.1,.1
 
 #cutmix=1
-mosaic=0
+mosaic=1
+mixup=1
 
 #:104x104 54:52x52 85:26x26 104:13x13 for 416
 
@@ -966,7 +969,8 @@ activation=linear
 
 [yolo]
 mask = 0,1,2
-anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
+# anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
+anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
 classes=1
 num=9
 jitter=.3
@@ -1054,7 +1058,8 @@ activation=linear
 
 [yolo]
 mask = 3,4,5
-anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
+# anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
+anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
 classes=1
 num=9
 jitter=.3
@@ -1142,7 +1147,8 @@ activation=linear
 
 [yolo]
 mask = 6,7,8
-anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
+# anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
+anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
 classes=1
 num=9
 jitter=.3
