update yolo configs, data, settings
Signed-off-by: Nguyen Xuan Bac <ngxbac.dt@gmail.com>

--- a/data/yolov4-lp.cfg
+++ b/data/yolov4-lp.cfg
@@ -970,7 +970,8 @@ activation=linear
 [yolo]
 mask = 0,1,2
 # anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
-anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
+# anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
+anchors = 12,  7,  15,  9,  10, 14,  18, 11,  21, 13,  17, 21,  25, 15,  32, 20,  44, 26
 classes=1
 num=9
 jitter=.3
@@ -1059,7 +1060,8 @@ activation=linear
 [yolo]
 mask = 3,4,5
 # anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
-anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
+# anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
+anchors = 12,  7,  15,  9,  10, 14,  18, 11,  21, 13,  17, 21,  25, 15,  32, 20,  44, 26
 classes=1
 num=9
 jitter=.3
@@ -1148,7 +1150,8 @@ activation=linear
 [yolo]
 mask = 6,7,8
 # anchors = 84, 19, 112, 25, 141, 28, 128, 37, 171, 35, 131, 53, 184, 43, 173, 64, 247, 51
-anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
+# anchors = 85, 19, 117, 24, 131, 30, 130, 39, 167, 33, 133, 55, 186, 42, 175, 64, 246, 51
+anchors = 12,  7,  15,  9,  10, 14,  18, 11,  21, 13,  17, 21,  25, 15,  32, 20,  44, 26
 classes=1
 num=9
 jitter=.3
